# pavone

./: .copilot-instructions.md  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  setup-uv-mirror.bat  setup.cfg  setup.py  uv.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: speckit.plan.agent.md
.github/workflows/: auto-release.lock.yml  auto-release.md  ci.yml  code-quality.yml  daily-metadata-test.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.uv/: pyproject.toml
docs/: config.md  development.md  download_manager_guide.md  download_options_fields.md  extractor_proxy_guide.md  logging_guide.md  usage.md
docs/dev/: TITLE_FIELD_FIX.md  architecture.md  development.md  testing.md  workflow.md
docs/plan/: 0.2.0.md  0.2.1.md  0.2.2.md  0.3.0.md  0.3.1.md  0.3.2.md  jellyfin-integration-detailed.md
docs/update/: 0.2.0.md  0.2.1.md
examples/: custom_extractors_example.py  download_manager_example.py  download_options_example.py  extractor_proxy_example.py  logging_example.py
experiment/: final_test_av01.py
pavone/: __init__.py  __main__.py  cli.py
pavone/cli/: README.md  __init__.py  utils.py
pavone/config/: __init__.py  configs.py  logging_config.py  manager.py  settings.py  validator.py
pavone/core/: __init__.py  base.py  dummy.py  exceptions.py  exit_codes.py  file_mover.py  metadata.py  organizer.py  searcher.py
pavone/jellyfin/: __init__.py  client.py  download_helper.py  exceptions.py  library_manager.py  models.py
pavone/manager/: __init__.py  download.py  execution.py  metadata_manager.py  plugin_manager.py  progress.py  search_manager.py
pavone/models/: __init__.py  constants.py  jellyfin_item.py  metadata.py  operation.py  progress_info.py  search_result.py
pavone/plugins/: __init__.py  av01_plugin.py  base.py  javrate_plugin.py  jtable_plugin.py  manager.py  memojav_plugin.py  missav_plugin.py
pavone/tools/: __init__.py  __main__.py  diagnose_jellyfin.py
pavone/utils/: __init__.py  code_extract_utils.py  file_operation_builder.py  filename_parser.py  format_utils.py  html_metadata_utils.py  http_utils.py  metadata_builder.py  operation_item_builder.py  signal_handler.py  stringutils.py  template_utils.py
scripts/: Makefile  dev.ps1  setup-uv-mirror.ps1  test_metadata_plugins.py
specs/001-tech-debt-optimization/: plan.md  spec.md  tasks.md
specs/002-eng-quality-uplift/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-metatube-metadata-extractor/: plan.md  spec.md  tasks.md
specs/004-metadata-plugin-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-jellyfin-library-listing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_av01_extractor.py  test_av01_metadata.py  test_av01_plugin.py  test_caribbeancom_metadata.py  test_code_extract_utils.py  test_config.py  test_download_manager.py  test_download_options.py  test_downloader.py  test_enrich_image_policy.py  test_exceptions.py  test_exit_codes.py  test_extract_utils.py  test_extractor_base.py  test_file_mover.py  test_file_operation_builder.py  test_filename_parser.py  test_http_utils_retry.py  test_javrate_plugin.py  test_jellyfin_client.py  test_jellyfin_integration.py  test_jellyfin_list.py  test_jellyfin_search_plugin.py  test_jtable_extractor.py  test_jtable_plugin.py  test_logging_config.py  test_m3u8_downloader.py  test_m3u8_progress.py  test_m3u8_segment_failure.py  test_memojav_extractor.py  test_memojav_plugin.py  test_metadata_manager.py  test_metadata_score.py  test_missav_extractor.py  test_missav_metadata.py  test_missav_plugin.py  test_missav_search.py  test_onepondo_metadata.py  test_organizer.py  (+5 more)
tests/data/: text_movie_ids.txt
tests/metadata/: conftest.py  movie.nfo  movie1.nfo  movie2.nfo  test_avbase.py  test_aventertainments.py  test_c0930.py  test_composite.py  test_dahlia.py  test_duga.py  test_faleno.py  test_fanza.py  test_fc2hub.py  test_fc2ppv_db.py  test_fc2ppvdb.py  test_gcolle.py  test_getchu.py  test_h0930.py  test_h4610.py  test_heydouga.py  test_heyzo.py  test_jav321.py  test_javbus.py  test_javfree.py  test_kin8tengoku.py  test_madouqu.py  test_mgstage.py  test_muramura.py  (+8 more)
(+137 files in other folders)
